[tool.poetry]
name = "modem"
version = "0.1.0"
description = ""
authors = ["Scott Olesen <swo@alum.mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wave = "^0.0.2"
sounddevice = "^0.4.6"
numpy = "^1.26.3"
ipykernel = "^6.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
